--- a/web/src/assets/styles.css
+++ b/web/src/assets/styles.css
@@ -112,6 +112,7 @@ body{
     position: absolute;
     /* top: 0;
     left: 0; */
+    z-index: 999;
     margin: 0px auto;
 }
 .nav_bar .logo{
@@ -126,12 +127,14 @@ body{
 }
 .nav_bar .nav_links .nav_list li{
     list-style: none;
-    margin: 0 20px;
+    margin: 0 0 0 20px;
+    padding-left: 20px;
 }
 .nav_bar .nav_links .nav_list li a{
     text-decoration: none;
     color: rgb(255, 255, 255);
     font-size: 16px;
+    transition: ease-in-out 0.3s;
 }
 .nav_bar .nav_links ul li a:hover{
     color: rgb(236, 24, 67);
@@ -141,13 +144,6 @@ body{
     display: none;
   } */
 
-.hero_section{
-    width: 100%;
-    height: 52vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.662), rgba(0, 0, 0, 0.113)), url(../hero.jpg);
-    background-size: cover;
-    background-position: center;
-}
 .nav_bar .menu{
     display: none;
 }
@@ -176,7 +172,7 @@ body{
     text-decoration: none;
     color: rgb(255, 255, 255);
     /* font-size: 16px; */
-    transition: ease-in-out 0.2s;
+    transition: ease-in-out 0.3s;
 }
 .nav_bar .signin:hover{
     background-color: #ffffff;
@@ -250,6 +246,7 @@ body{
     background-repeat: no-repeat;
     display: flex;
     flex-wrap: wrap;
+    background-color: rgb(8, 8, 8);
 }
 
 .image-cropper {
@@ -468,127 +465,149 @@ body{
 }
 
 
-/* Hero section  */
-
-.hero_section .hero_content{
-    position: absolute;
-    top: 25%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
-/* .hero_section .hero_content img{
-    margin-bottom: 20px;
-} */
-.hero_section .hero_content h1{
-    width: 100vw;
-    color: white;
-    font-size: 50px;
-    font-weight: 500;
-    box-shadow: 20px rgba(0, 0, 0, 0.5);
-}
-.hero_section .search_bar{
-    background-color: #f4f4f4;
-    width: 80%;
-    max-width: 800px;
-    padding: 2px;
-    border-radius: 6px;
-    position: absolute;
-    top: 170%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.hero_section .search_bar #select{
-    background-color: #F4F4ED;
-    color: rgb(53, 53, 53);
-    font-size: 15px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 300px;
-    padding: 10px 10px;
-    cursor: pointer;
+/* Carousel styling */
+.hero-carousel {
     position: relative;
-    border-radius: 6px;
+    width: 100%;
+    height: 53vh;
+    overflow: hidden;
 }
-#select #arrow{
-    width: 30px;
-    pointer-events: none;
-}
-#select img#location{
-    width: 25px;
-    margin-right: 20px;
-}
-#select ul{
+
+.hero-carousel h2{
     position: absolute;
-    top: 120%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    text-align: center;
+    font-size: 2.5rem;
+    color: #e4e4e4;
+    /* text-shadow: 0 4px 6px rgba(0, 0, 0, 1); */
+    font-weight: 600;
+}
+
+.carousel-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.carousel-image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0;
+    transition: opacity 1s ease;
+}
+
+.carousel-image.active {
+    opacity: 1;
+}
+
+/* Gradient overlay on images */
+.carousel-container::before {
+    content: '';
+    position: absolute;
+    top: 0;
     left: 0;
     width: 100%;
-    height: 120px;
-    background-color: #F4F4ED;
-    color: black;
-    list-style: none;
-    border-radius: 6px;
-    overflow: hidden;
-    overflow-y: auto;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.745), rgba(0, 0, 0, 0.431));
+    z-index: 1;
+    pointer-events: none;
+}
+
+/* Search bar on carousel */
+.carousel-search {
     position: absolute;
-    max-height: 0;
-    transition: max-height 0.5s;
-}
-#select ul::-webkit-scrollbar{
-    width: 0;
-}
-#select ul.open{
-    max-height: 400px;
-}
-#select ul li{
+    bottom: 33%;
+    left: 50%;
+    z-index: 2;
+    transform: translateX(-50%);
     display: flex;
-    padding: 10px 20px;
-    cursor: pointer;
+    align-items: center;
+    background-color: #f8f8f8;
+    padding: 5px 5px;
+    border-radius: 5px;
 }
-#select ul li:hover{
-    background-color: #FFD04D;
-    border-radius: 6px;
-}
-.search_bar img#rule{
-    width: 25px;
-    transform: rotate(90deg);
-}
-.search_bar input{
-    background-color: transparent;
-    width: 100%;
-    padding: 10px 20px;
-    outline: none;
+
+.location-dropdown {
+    padding: 8px;
+    margin-right: 10px;
     border: none;
-    font-size: 18px;
-}
-.search_bar button{
-    background-color: #FFD04D;
-    color: black;
-    padding: 13px 30px;
-    border: none;
+    /* border-radius: 5px; */
     outline: none;
     font-size: 18px;
+    font-weight: 300;
+    width: 150px;
     cursor: pointer;
-    border-radius: 6px;
+}
+
+.location-dropdown select {
+    padding: 8px;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    font-size: 18px;
+    font-weight: 300;
+    cursor: pointer;
+}
+
+.location-dropdown option {
+    padding: 8px;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    font-size: 18px;
+    font-weight: 300;
+    cursor: pointer;
+}
+
+.material-symbols-outlined{
+    font-size: 20px;
+    rotate: 90deg;
+}
+
+.search-input {
+    padding: 8px;
+    width: 300px;
+    margin-right: 10px;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    font-size: 18px;
+    font-weight: 300;
+    cursor: pointer;
+}
+
+.search-button {
+    padding: 10px 30px;
+    background-color: #FFD04D;
+    color: #0c0c0c;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: 500;
+    transition: ease-in-out 0.2s;
+}
+
+.search-button:hover {
+    background-color: #F12630;
+    color: #f8f8f8;
 }
 
 
 /* Body */
 
-
-
 .body_container{
-    width: 100%;
-    height: 50vh;
+    width: 100vw;
+    height: 500px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(255, 255, 255);
+    background-color: #f8f8f8;
     padding: 20px;
 }
 .body_container .body_content{
@@ -596,15 +615,11 @@ body{
     height: 100%;
     /* padding: 20px; */
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
 }
 
-
-
 /* Hero Cards */
-
-
 
 .body_cards{
     width: 100%;
@@ -618,8 +633,8 @@ body{
     
 }
 .card {
-    width: 270px;
-    height: 370px;
+    width: 20%;
+    height: 88%;
     background-color: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
@@ -633,7 +648,7 @@ body{
 }
 .card-img {
     width: 100%;
-    height: 230px;
+    height: 200px;
     object-fit: cover;
     transition: transform 0.3s ease-in-out;
 }
@@ -672,7 +687,7 @@ body{
 
 /* Popular Restaurants Section */
 .popular-restaurants {
-    padding: 80px 100px;
+    padding: 30px 180px;
     background-color: #f8f8f8;
     text-align: left;
 }
