--- a/web/src/pages/AddRestaurent/Restaurant_public_info/Restaurant_public_info.css
+++ b/web/src/pages/AddRestaurent/Restaurant_public_info/Restaurant_public_info.css
@@ -89,6 +89,7 @@
     .hero {
         height: 25vh; /* 20% of the viewport height */
         background: linear-gradient(rgba(0, 0, 0, 0.698), rgba(0, 0, 0, 0.5)), url('./assets/hero.png') center center no-repeat;
+        background-size: cover;
         display: flex;
         justify-content: center;
         align-items: center;
