--- a/web/src/pages/Confirmations/Confirmation.css
+++ b/web/src/pages/Confirmations/Confirmation.css
@@ -25,6 +25,22 @@ body {
     width: 100%;
     text-align: center;
 }
+.logo {
+    width: 150px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.logo img {
+    width: 100%;
+    height: auto;
+}
 
 h1 {
     color: #28a745;
